added  header, promo, advantages - desktop and mobile

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,16 @@
-@import '_variables.scss';
+@import 'variables';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
+
+.container {
+    max-width: 945px;
+    margin: 0 auto;
+}
+
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/button';
+@import 'blocks/advantages';
+@import 'blocks/title';
+@import 'media';
