--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -1,7 +1,7 @@
 .promo {
     min-height: 650px;
     padding: 21px 0 93px;
-    background: url('../../img/running.jpg') center (center/cover) no-repeat;
+    background: url('../img/running.jpg') center (center/cover) no-repeat;
     &__wrapper {
         display: flex;
         flex-direction: column;
