added consultation section desktop and mobile

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -92,4 +92,11 @@
     .button_main {
         margin-top: 40px;
     }
+    .title_white {
+        font-size: 20px;
+    }
+    .consultation__descr {
+        margin-top: 40px;
+        font-size: 16px;
+    }
 }
