--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -15,4 +15,9 @@
         height: 50px;
         font-size: 16px;
     }
+    &_submit {
+        width: 300px;
+        height: 55px;
+        font-size: 16px;
+    }
 }
