--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,6 @@
 @import 'blocks/button';
 @import 'blocks/advantages';
 @import 'blocks/title';
+@import 'blocks/consultation';
+@import 'blocks/contact-form';
 @import 'media';
