--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,4 +15,5 @@
 @import 'blocks/title';
 @import 'blocks/consultation';
 @import 'blocks/contact-form';
+@import 'blocks/carousel';
 @import 'media';
