--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,5 @@
 @import 'blocks/consultation';
 @import 'blocks/contact-form';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
 @import 'media';
