--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -67,11 +67,21 @@
             max-width: 315px;
         }
     }
+    .reviews__img {
+        width: 100px;
+        height: 100px;
+    }
+    .reviews__details {
+        margin-left: 25px;
+    }
 }
 
 @media (max-width: 575px) {
     .container {
         max-width: 300px;
+    }
+    .title {
+        font-size: 20px;
     }
     .header {
         flex-wrap: wrap;
@@ -105,9 +115,6 @@
     .button_main {
         margin-top: 40px;
     }
-    .title_white {
-        font-size: 20px;
-    }
     .consultation__descr {
         margin-top: 40px;
         font-size: 16px;
@@ -120,9 +127,7 @@
         }
     }
     .catalog {
-        .title {
-            font-size: 22px;
-        }
+        padding-bottom: 60px;
         &__tabs {
             margin-top: 30px;
             flex-direction: column;
@@ -134,6 +139,26 @@
         }
         &__content {
             margin-top: 30px;
+        }
+    }
+    .reviews {
+        padding-bottom: 30px;
+        &__item {
+            flex-direction: column;
+            &_mb {
+                margin-bottom: 50px;
+            }
+        }
+        &__img {
+            display: block;
+            margin: 0 auto 15px;
+        }
+        &__details {
+            margin-left: 0;
+        }
+        &__name,
+        &__marathon {
+            text-align: center;
         }
     }
 }
