--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -9,6 +9,10 @@
     font-weight: 500;
     text-transform: uppercase;
     text-align: center;
+    transition: all .2s ease-in-out;
+    &:hover {
+        transform: scale(1.1);
+    }
     &_main {
         margin-top: 68px;
         width: 300px;
@@ -24,5 +28,6 @@
         width: 131px;
         height: 40px;
         font-size: 14px;
+        line-height: 14px;
     }
 }
