--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,4 +17,7 @@
 @import 'blocks/contact-form';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/catalog-item';
+@import 'blocks/reviews';
+@import 'blocks/footer';
 @import 'media';
