--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -74,6 +74,13 @@
     .reviews__details {
         margin-left: 25px;
     }
+    .footer {
+        &__contacts {
+            position: static;
+            width: 100%;
+            transform: translateX(0%);
+        }
+    }
 }
 
 @media (max-width: 575px) {
@@ -160,5 +167,12 @@
         &__marathon {
             text-align: center;
         }
+    }
+    .footer__contacts {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .footer__address {
+        font-size: 14px;
     }
 }
