--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,4 +21,6 @@
 @import 'blocks/reviews';
 @import 'blocks/footer';
 @import 'blocks/modal';
+@import 'blocks/pageup';
+@import 'animations';
 @import 'media';
