--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -34,4 +34,9 @@
             text-decoration: underline;
         }
     }
+    &__heart_animated {
+        &:hover {
+            animation: pulse 1s ease infinite alternate;
+        }
+    }
 }
