--- a/src/sass/blocks/_contact-form.scss
+++ b/src/sass/blocks/_contact-form.scss
@@ -15,8 +15,18 @@
         font-size: 14px;
         font-weight: 300;
         margin-bottom: 15px;
-         :nth-child(3) {
+        &:nth-child(3) {
             margin-bottom: 20px;
         }
+    }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        margin-bottom: 16px;
+        font-size: 14px;
+        line-height: 1;
+        color: red;
     }
 }
