--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,7 @@
+@import 'libs/bootstrap-reboot.min.scss';
+@import 'libs/fonts.scss';
+@import 'libs/slick.scss';
+@import 'libs/animate.scss';
 @import 'variables';
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
